# SanWebBrowserRust

./: README.md
EnchantoBrowser/: index.html  package-lock.json  package.json  tailwind.config.js
EnchantoBrowser/src/: App.jsx  main.jsx  styles.css
EnchantoBrowser/src-tauri/: Cargo.toml  tauri.conf.json
EnchantoBrowser/src-tauri/src/: main.rs
EnchantoBrowser/src-tauri/src/tools/: mod.rs
EnchantoBrowser/src-tauri/src/tools/resource_managment/: data_types.rs  mod.rs  san_hardware.rs
EnchantoBrowser/src/components/Layout/: AppBar.jsx  Layout.jsx  Loading.jsx  Navbar.jsx  Wrapper.jsx
EnchantoBrowser/src/components/Layout/styles/: Navabar.module.css
EnchantoBrowser/src/store/: sanAtoms.js  sanComputed.js
