[package]
name = "EnchantoBrowser"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rodio = "0.17.1"
reqwest = { version = "0.11.18", features = ["json", "cookies", "blocking"] }
tauri-runtime-wry = { version = "0.14.0", features = ["clipboard", "devtools", "system-tray", "dox"] }
sysinfo = { version = "0.29.2", features = [ "serde"] }

[profile.release]
codegen-units = 1
lto = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
